@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.909 2009/06/25 23:54:18 martin Exp $
+# $Id: CHANGES,v 1.910 2009/06/26 00:59:23 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.0 beta4 (2009/06/??)
+ - (2009/06/25) Fixed bug# 3911 - Not all Dashboard Functions e. g. charts
+    available in Internet Explorer 6.
  - (2009/06/25) Fixed bug# 3925 - Frontend::NavBarModule in agent navigation
     bar "Ticket::TicketSearchFulltext" and "Ticket::TicketSearchProfile" not
     working together.
